Добавил функционал добавления и удаления лайков к коментариям. Поправил некоторые ошибки