@@ -1,8 +1,8 @@
 package ru.practicum.ewm.comments.service;
 
-import jakarta.validation.ValidationException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -10,8 +10,12 @@ import ru.practicum.ewm.comments.dto.CommentDto;
 import ru.practicum.ewm.comments.dto.NewCommentDto;
 import ru.practicum.ewm.comments.mapper.CommentMapper;
 import ru.practicum.ewm.comments.model.Comment;
+import ru.practicum.ewm.comments.model.CommentLike;
+import ru.practicum.ewm.comments.model.Sort;
+import ru.practicum.ewm.comments.repository.CommentLikeRepository;
 import ru.practicum.ewm.comments.repository.CommentRepository;
 import ru.practicum.ewm.common.OffsetPageRequest;
+import ru.practicum.ewm.error.ConflictException;
 import ru.practicum.ewm.error.NotFoundException;
 import ru.practicum.ewm.events.dto.EventShortDto;
 import ru.practicum.ewm.events.mapper.EventMapper;
@@ -24,6 +28,7 @@ import ru.practicum.ewm.user.repository.UserRepository;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -34,6 +39,7 @@ public class CommentServiceImpl implements CommentService {
     private final CommentRepository commentRepository;
     private final UserRepository userRepository;
     private final EventRepository eventRepository;
+    private final CommentLikeRepository commentLikeRepository;
 
     @Override
     public CommentDto createComment(Long userId, Long eventId, NewCommentDto newCommentDto) {
@@ -44,75 +50,138 @@ public class CommentServiceImpl implements CommentService {
         Comment comment = commentRepository.save(CommentMapper.toComment(newCommentDto, author, event));
         UserShortDto userShort = UserMapper.toUserShortDto(author);
         EventShortDto eventShort = EventMapper.toEventShortDto(event);
+        long countLikes = commentLikeRepository.countByCommentId(comment.getId());
         log.debug("Comment created with id: {}", comment.getId());
 
-        return CommentMapper.toCommentDto(comment, userShort, eventShort);
+
+        return CommentMapper.toCommentDto(comment, userShort, eventShort, countLikes);
     }
 
     @Override
-    public CommentDto updateComment(Long userId, Long eventId, Long commentId, NewCommentDto newCommentDto) {
-        log.info("Updating comment for user: {}, event: {}", userId, eventId);
+    public CommentDto updateComment(Long userId, Long commentId, NewCommentDto newCommentDto) {
         User author = checkAndGetUser(userId);
-        Event event = checkAndGetEvent(eventId);
         Comment comment = checkAndGetComment(commentId);
+        Event event = checkAndGetEvent(comment.getEvent().getId());
+        log.info("Updating comment for user: {}, event: {}", userId, event.getId());
 
-        if (comment.getEvent() != event) {
-            throw new ValidationException("This comment is for other event.");
+        if (!comment.getAuthor().getId().equals(userId)) {
+            throw new ConflictException("Only the author can edit the comment.");
+        }
+        if (!comment.getEvent().getId().equals(event.getId())) {
+            throw new ConflictException("This comment is for other event.");
         }
 
         comment.setText(newCommentDto.getText());
         comment.setEdited(LocalDateTime.now());
         UserShortDto userShort = UserMapper.toUserShortDto(author);
         EventShortDto eventShort = EventMapper.toEventShortDto(event);
+        long countLikes = commentLikeRepository.countByCommentId(comment.getId());
 
-        return CommentMapper.toCommentDto(comment, userShort, eventShort);
+        return CommentMapper.toCommentDto(comment, userShort, eventShort, countLikes);
     }
 
     @Override
-    public List<CommentDto> getCommentsByAuthorId(Long userId, Integer from, Integer size) {
-        log.info("Getting comments from user: userId={}, from={}, size={}", userId, from, size);
+    @Transactional(readOnly = true)
+    public List<CommentDto> getCommentsByAuthorId(Long userId, Integer from, Integer size, Sort sort) {
+        log.info("Getting comments from user sorted by likes: userId={}, from={}, size={}",
+                userId, from, size);
+
         User author = checkAndGetUser(userId);
         UserShortDto userShort = UserMapper.toUserShortDto(author);
 
         Pageable pageable = new OffsetPageRequest(from, size);
 
-        return commentRepository.findAllByAuthorId(userId, pageable)
+        Page<Comment> page = switch (sort) {
+            case ASC -> commentRepository.findAllByAuthorIdOrderByLikesAsc(userId, pageable);
+            case DESC -> commentRepository.findAllByAuthorIdOrderByLikesDesc(userId, pageable);
+        };
+
+        List<Comment> comments = page.getContent();
+
+        if (comments.isEmpty()) {
+            return List.of();
+        }
+
+        List<Long> ids = comments.stream()
+                .map(Comment::getId)
+                .toList();
+
+        Map<Long, Long> likesMap = commentLikeRepository.countLikesForComments(ids)
                 .stream()
-                .map(c -> CommentMapper.toCommentDto(c, userShort, EventMapper.toEventShortDto(c.getEvent())))
-                .collect(Collectors.toList());
+                .collect(Collectors.toMap(
+                        r -> (Long) r[0],
+                        r -> (Long) r[1]
+                ));
+
+        return comments.stream()
+                .map(c -> CommentMapper.toCommentDto(
+                        c,
+                        userShort,
+                        EventMapper.toEventShortDto(c.getEvent()),
+                        likesMap.getOrDefault(c.getId(), 0L)
+                ))
+                .toList();
     }
 
     @Override
-    public List<CommentDto> getCommentByEventId(Long eventId, Integer from, Integer size) {
-        log.info("Getting comments for event: eventId={}, from={}, size={}", eventId, from, size);
+    @Transactional(readOnly = true)
+    public List<CommentDto> getCommentByEventId(Long eventId, Integer from, Integer size, Sort sort) {
+        log.info("Getting comments for event sorted by likes: eventId={}, from={}, size={}",
+                eventId, from, size);
+
         Event event = checkAndGetEvent(eventId);
         EventShortDto eventShort = EventMapper.toEventShortDto(event);
 
         Pageable pageable = new OffsetPageRequest(from, size);
 
-        return commentRepository.findAllByEventId(eventId, pageable)
+        Page<Comment> page = commentRepository
+                .findAllByEventIdOrderByLikesDesc(eventId, pageable);
+
+        List<Comment> comments = page.getContent();
+
+        if (comments.isEmpty()) {
+            return List.of();
+        }
+
+        List<Long> ids = comments.stream()
+                .map(Comment::getId)
+                .toList();
+
+        Map<Long, Long> likesMap = commentLikeRepository.countLikesForComments(ids)
                 .stream()
-                .map(c -> CommentMapper.toCommentDto(c, UserMapper.toUserShortDto(c.getAuthor()), eventShort))
-                .collect(Collectors.toList());
+                .collect(Collectors.toMap(
+                        r -> (Long) r[0],
+                        r -> (Long) r[1]
+                ));
+
+        return comments.stream()
+                .map(c -> CommentMapper.toCommentDto(
+                        c,
+                        UserMapper.toUserShortDto(c.getAuthor()),
+                        eventShort,
+                        likesMap.getOrDefault(c.getId(), 0L)
+                ))
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public CommentDto getCommentById(Long commentId) {
         log.info("Getting comment with id={}", commentId);
         Comment comment = checkAndGetComment(commentId);
         UserShortDto userShort = UserMapper.toUserShortDto(comment.getAuthor());
         EventShortDto eventShort = EventMapper.toEventShortDto(comment.getEvent());
+        long countLikes = commentLikeRepository.countByCommentId(comment.getId());
 
-        return CommentMapper.toCommentDto(comment, userShort, eventShort);
+        return CommentMapper.toCommentDto(comment, userShort, eventShort, countLikes);
     }
 
     @Override
-    @Transactional
     public void deleteComment(Long userId, Long commentId) {
         log.info("Delete comment by a user: userId={}, commentId={}", userId, commentId);
         Comment comment = checkAndGetComment(commentId);
         if (!comment.getAuthor().getId().equals(userId)) {
-            throw new ValidationException("Only author can delete the comment.");
+            throw new ConflictException("Only author can delete the comment.");
         }
 
         commentRepository.deleteById(commentId);
@@ -124,6 +193,41 @@ public class CommentServiceImpl implements CommentService {
         checkAndGetComment(commentId);
         commentRepository.deleteById(commentId);
     }
+
+    @Override
+    public CommentDto addLike(Long userId, Long commentId) {
+        User author = checkAndGetUser(userId);
+        Comment comment = checkAndGetComment(commentId);
+        Event event = checkAndGetEvent(comment.getEvent().getId());
+
+        if (commentLikeRepository.existsByUserIdAndCommentId(userId, commentId)) {
+            throw new ConflictException("You already liked this comment");
+        }
+
+        CommentLike like = CommentLike.builder()
+                .user(author)
+                .comment(comment)
+                .build();
+
+        commentLikeRepository.save(like);
+
+        long likesCount = commentLikeRepository.countByCommentId(commentId);
+
+        UserShortDto userShort = UserMapper.toUserShortDto(author);
+        EventShortDto eventShort = EventMapper.toEventShortDto(event);
+
+        return CommentMapper.toCommentDto(comment, userShort, eventShort, likesCount);
+    }
+
+    @Override
+    public void deleteLike(Long userId, Long commentId) {
+        CommentLike like = commentLikeRepository
+                .findByUserIdAndCommentId(userId, commentId)
+                .orElseThrow(() -> new NotFoundException("Like not found"));
+
+        commentLikeRepository.delete(like);
+    }
+
 
     private Comment checkAndGetComment(Long commentId) {
         return commentRepository.findById(commentId).orElseThrow(() ->
